SONARRUBY-98 clean sonar issues (#89)